--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -19,7 +19,7 @@
         font-family: "Arial", sans-serif;
         font-size: 14px;
         font-weight: normal;
-        padding: 10px 10px 10px 35px;
+        padding: 8px 10px 8px 35px;
         line-height: 1;
         position: relative;
         text-align: left;
@@ -100,6 +100,9 @@
         text-transform: uppercase;
         line-height: 1.2;
         text-align: center;
+        @include mn1200 {
+            text-align: left;
+        }
     }
     &__body {
         font-size: 14px;
@@ -121,9 +124,9 @@
             }
             @include mn1200 {
                 width: 33.33%;
-                padding-right: 30px;
+                padding-right: 20px;
                 margin-bottom: 0;
-                &:last-child {
+                &:last-of-type {
                     padding-right: 0;
                 }
             }
@@ -132,6 +135,13 @@
     .wpcf7-submit {
         @include mn1200 {
             width: 100%;
+        }
+    }
+    form a {
+        color: inherit;
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
         }
     }
 }
