--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -81,9 +81,7 @@ img {
         margin-left: 300px;
     }
     &__inner {
-        max-width: 1100px;
-        width: 100%;
-        margin: 0 auto;
+        @include content-width;
         padding-bottom: 30px;
         @include mn992 {
             padding-top: 60px;
@@ -91,11 +89,7 @@ img {
     }
     &__title {
         margin: 20px 0;
-        padding: 20px 10px;
         text-align: center;
-        @include mn768 {
-            padding: 30px 40px;
-        }
         @include mn992 {
             text-align: left;
             margin: 40px 0;
