--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -60,6 +60,9 @@
 }
 
 .wpcf7 {
+	form {
+		position: relative;
+	}
     span.wpcf7-list-item {
         margin: 0;
     }
@@ -84,6 +87,12 @@
         margin: 0;
         font-weight: inherit;
     }
+}
+
+div.wpcf7 .ajax-loader {
+	position: absolute;
+	right: 0;
+	bottom: -20px;
 }
 
 .form-content {
