--- a/css/_mixins_project.scss
+++ b/css/_mixins_project.scss
@@ -1,4 +1,10 @@
 // Usage: @include mixin_name {}
+@mixin content-width {
+   max-width: 1100px;
+   width: 100%;
+   margin: 0 auto;
+}
+
 @mixin svg-icon-flag {
 	display: inline-block;
 	vertical-align: middle;
